fix axis numbers getting cut off

--- a/themes/evictionlab/assets/eviction-tracking/app.css
+++ b/themes/evictionlab/assets/eviction-tracking/app.css
@@ -1921,6 +1921,7 @@ body {
   }
   .chart__axis.chart__axis--y .tick text {
     font-family: var(--number-font);
+    font-size: 12px;
     font-weight: 500;
   }
 
